--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* Website template by freewebsitetemplates.com */
 body {
 	margin: 0;
 	padding: 0;
@@ -23,7 +22,6 @@ a:active {
 img {
 	border: none;
 }
-/*-------------------------------------------FONTS---------------------------------------------*/
 @font-face {
 	font-family: 'audiowide-regular-webfont';
 	src: url('../fonts/audiowide-regular-webfont.eot');
@@ -81,7 +79,7 @@ img {
 	margin: 0;
 	min-height: 60px;
 	padding: 0 24px;
- *padding: 0 23px; /* Needed for IE8 and old versions */
+    padding: 0 23px; /* Needed for IE8 and old versions */
 	text-align: center;
 	text-transform: uppercase;
 	width: auto;
@@ -248,7 +246,7 @@ img {
 	font-weight: normal;
 	line-height: 23px;
 	margin: 96px 0 0;
- *margin: 102px 0 0;/* Needed for IE8 and old versions */
+    margin: 102px 0 0;/* Needed for IE8 and old versions */
 	min-height: 27px;
 	padding: 17px 0 10px;
 	position: relative;
