--- a/css/style.css
+++ b/css/style.css
@@ -1408,3 +1408,52 @@ img {
 #wix a img {
 	width: 100%;
 }
+
+.drop-zone {
+	width: 300px;
+	height: 200px;
+	padding: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	font-family: "Quicksand", sans-serif;
+	font-weight: 500;
+	font-size: 40px;
+	cursor: pointer;
+	color: #ffffff;
+	border: solid #a0a9a7;
+	border-radius: 15px;
+  }
+  
+  .drop-zone--over {
+	border-style: solid;
+  }
+  
+  .drop-zone__input {
+	display: none;
+  }
+  
+  .drop-zone__thumb {
+	width: 100%;
+	height: 100%;
+	border-radius: 10px;
+	overflow: hidden;
+	background-color: #ed0000;
+	background-size: cover;
+	position: relative;
+  }
+  
+  .drop-zone__thumb::after {
+	content: attr(data-label);
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	padding: 5px 0;
+	color: #ffffff;
+	background: rgba(0, 0, 0, 0.75);
+	font-size: px;
+	text-align: center;
+  }
+  
